--- a/fix_pls_god/index.html
+++ b/fix_pls_god/index.html
@@ -68,19 +68,12 @@
         <section class="intro">
             <div class="intro__wrapper">
                 <div class="intro__text">
-                    <!-- <div class="intro__slides">
-                        <button></button>
-                        <button></button>
-                        <button></button>
-                        <button></button>
-                        <button></button>
-                    </div> -->
                     <h1>Ремонт мобильных телефонов <br> в Минске</h1>
                     <span>Иногда ваши устройства нуждаются в помощи <br> и в этот момент мы будем на страже</span>
                     <button class="intro__main--button"  onclick="footerOrderCall()">Заказать звонок</button>
                 </div>
                 
-                <div>
+                <div class="social__intro">
                     <a class="social__item" href="https://m.facebook.com/Fiix.by/?ref=bookmarks" target="_blank">
                         <svg>
                             <use xlink:href="#facebook"></use>
@@ -184,25 +177,31 @@
                 <div class="service__block">
                     <div class="service__numbers">01</div>
                     <div class="service__block--item">
-                        <span>Заказ звонка и консультация</span>
-                        <img src="../fix_pls_god/img/icons/01.svg" alt="">
-                        <p>Закажите звонок на сайте или позвоните нам и наш специалист проконсультирует вас по любому вопросу <br>Привезите ваш телефон в нашу мастерскую</p>
+                        <div>
+                            <span>Заказ звонка и консультация</span>
+                            <img src="../fix_pls_god/img/icons/01.svg" alt="">
+                        </div>
+                        <p>Закажите звонок на сайте или позвоните нам и наш специалист проконсультирует вас по любому вопросу <br> <br> Привезите ваш телефон в нашу мастерскую</p>
                     </div>
                 </div>
                 <div class="service__block">
                     <div class="service__numbers">02</div>
                     <div class="service__block--item">
-                        <span>Проведение ремонта</span>
-                        <img src="../fix_pls_god/img/icons/02.svg" alt="">
-                        <p>Вы продолжаете наслаждаться жизнью, работать, отдыхать и заниматься своими любимыми делами <br>А мы делаем все возможное и невозможное для вашего телефона</p>
+                        <div>
+                            <span>Проведение ремонта</span>
+                            <img src="../fix_pls_god/img/icons/02.svg" alt="">
+                        </div>
+                        <p>Вы продолжаете наслаждаться жизнью, работать, отдыхать и заниматься своими любимыми делами <br> <br> А мы делаем все возможное и невозможное для вашего телефона</p>
                     </div>
                 </div>
                 <div class="service__block">
                     <div class="service__numbers">03</div>
                     <div class="service__block--item">
-                        <span>Прием работы и расчет</span>
-                        <img src="../fix_pls_god/img/icons/03.svg" alt="">
-                        <p>Наш специалист сообщит вам о готовности вашего телефона. И вы сможете забрать его в удобное вам время <br>А еще даем вам гарантию на все виды работ до 12 месяцев</p>
+                        <div>
+                            <span>Прием работы и расчет</span>
+                            <img src="../fix_pls_god/img/icons/03.svg" alt="">
+                        </div>
+                        <p>Наш специалист сообщит вам о готовности вашего телефона. И вы сможете забрать его в удобное вам время <br> <br>  А еще даем вам гарантию на все виды работ до 12 месяцев</p>
                     </div>
                 </div>
             </div>
