--- a/fix_pls_god/price.html
+++ b/fix_pls_god/price.html
@@ -71,8 +71,8 @@
         <section>
             <div class="price__column">
                 <div class="price__left--column" id="left__column">
-                    <a href="../fix_pls_god/price.html" onclick="toogleApple()">Apple</a>
-                    <a href="../fix_pls_god/price.html" onclick="toogleSamsung()">Samsung</a>
+                    <input type="button" value="Apple" id="aaa">
+                    <a href="../fix_pls_god/price.html" id="">Samsung</a>
                     <button onclick="toogleSony()">Sony</button>
                     <a href="../fix_pls_god/price.html">Nokia</a>
                     <a href="../fix_pls_god/price.html">Meizu</a>
@@ -82,127 +82,132 @@
                     <a href="../fix_pls_god/price.html">LG</a>
                     <a href="../fix_pls_god/price.html">Nokia</a>
                 </div>
+                
 <!--  Price Apple -->
-                <div class="price__right--column" id="price__Apple">
-                    <span>Цены Apple</span>
-                    <div class="price__main--container" >
-                        <div>
-                            <h6>Ремонт любой сложности</h6>
-                            <div>
-                                <span>Замена разъема (не заряжается)</span>
-                                <span>от 25 руб	</span>
-                                <span>от 30 мин</span>
+                <div class="price__right--column">
+                    <div id="priceApple">
+                            <span>Цены Apple</span>
+                            <div class="price__main--container" >
+                                <div>
+                                    <h6>Ремонт любой сложности</h6>
+                                    <div>
+                                        <span>Замена разъема (не заряжается)</span>
+                                        <span>от 25 руб	</span>
+                                        <span>от 30 мин</span>
+                                    </div>
+                                    <div>
+                                        <span>Замена динамика (я не слышу собеседника)</span>
+                                        <span>от 25 руб	</span>
+                                        <span>от 30 мин</span>
+                                    </div>
+                                    <div>
+                                        <span>Замена полифонического динамика (я не слышу звонок)</span>
+                                        <span>от 25 руб	</span>
+                                        <span>от 30 мин</span>
+                                    </div>
+                                    <div>
+                                        <span>Замена микрофона (меня не слышит собеседник)</span>
+                                        <span>от 25 руб	</span>
+                                        <span>от 30 мин</span>
+                                    </div>
+                                    <div>
+                                        <span>Замена кнопок (вкл +/-)</span>
+                                        <span>от 25 руб	</span>
+                                        <span>от 30 мин</span>
+                                    </div>
+                                    <div>
+                                        <span>Не видит sim</span>
+                                        <span>от 25 руб	</span>
+                                        <span>от 30 мин</span>
+                                    </div>
+                                    <div>
+                                        <span>Программный ремонт</span>
+                                        <span>от 25 руб	</span>
+                                        <span>от 30 мин</span>
+                                    </div>
+                                </div>
+                                <div>
+                                    <h6>Замена стекла</h6>
+                                    <div>
+                                        <span>iPhone 5, 5s</span>
+                                        <span>от 160 руб</span>
+                                        <span>от 30 мин</span>
+                                    </div>
+                                    <div>
+                                        <span>iPhone 6</span>
+                                        <span>от 160 руб</span>
+                                        <span>от 30 мин</span>
+                                    </div>
+                                    <div>
+                                        <span>iPhone 6 PLUS</span>
+                                        <span>от 160 руб</span>
+                                        <span>от 30 мин</span>
+                                    </div>
+                                    <div>
+                                        <span>iPhone 6s</span>
+                                        <span>от 160 руб</span>
+                                        <span>от 30 мин</span>
+                                    </div>
+                                    <div>
+                                        <span>iPhone 5SE</span>
+                                        <span>от 160 руб</span>
+                                        <span>от 30 мин</span>
+                                    </div>
+                                    <div>
+                                        <span>iPhone 7</span>
+                                        <span>от 160 руб</span>
+                                        <span>от 30 мин</span>
+                                    </div>
+                                    <div>
+                                        <span>iPhone 7 PLUS</span>
+                                        <span>от 160 руб</span>
+                                        <span>от 30 мин</span>
+                                    </div>
+                                </div>
+                                <div class="price__last--block">
+                                    <h6>Замена ЖКИ модуля</h6>
+                                    <div>
+                                        <span>iPhone 5, 5s</span>
+                                        <span>от 85 руб</span>
+                                        <span>от 30 мин</span>
+                                    </div>
+                                    <div>
+                                        <span>iPhone 6</span>
+                                        <span>от 85 руб</span>
+                                        <span>от 30 мин</span>
+                                    </div>
+                                    <div>
+                                        <span>iPhone 6 PLUS</span>
+                                        <span>от 85 руб</span>
+                                        <span>от 30 мин</span>
+                                    </div>
+                                    <div>
+                                        <span>iPhone 6s</span>
+                                        <span>от 85 руб</span>
+                                        <span>от 30 мин</span>
+                                    </div>
+                                    <div>
+                                        <span>iPhone 5SE</span>
+                                        <span>от 85 руб</span>
+                                        <span>от 30 мин</span>
+                                    </div>
+                                    <div>
+                                        <span>iPhone 7</span>
+                                        <span>от 85 руб</span>
+                                        <span>от 30 мин</span>
+                                    </div>
+                                    <div>
+                                        <span>iPhone 7 PLUS</span>
+                                        <span>от 85 руб</span>
+                                        <span>от 30 мин</span>
+                                    </div>
+                                </div>
                             </div>
-                            <div>
-                                <span>Замена динамика (я не слышу собеседника)</span>
-                                <span>от 25 руб	</span>
-                                <span>от 30 мин</span>
-                            </div>
-                            <div>
-                                <span>Замена полифонического динамика (я не слышу звонок)</span>
-                                <span>от 25 руб	</span>
-                                <span>от 30 мин</span>
-                            </div>
-                            <div>
-                                <span>Замена микрофона (меня не слышит собеседник)</span>
-                                <span>от 25 руб	</span>
-                                <span>от 30 мин</span>
-                            </div>
-                            <div>
-                                <span>Замена кнопок (вкл +/-)</span>
-                                <span>от 25 руб	</span>
-                                <span>от 30 мин</span>
-                            </div>
-                            <div>
-                                <span>Не видит sim</span>
-                                <span>от 25 руб	</span>
-                                <span>от 30 мин</span>
-                            </div>
-                            <div>
-                                <span>Программный ремонт</span>
-                                <span>от 25 руб	</span>
-                                <span>от 30 мин</span>
-                            </div>
-                        </div>
-                        <div>
-                            <h6>Замена стекла</h6>
-                            <div>
-                                <span>iPhone 5, 5s</span>
-                                <span>от 160 руб</span>
-                                <span>от 30 мин</span>
-                            </div>
-                            <div>
-                                <span>iPhone 6</span>
-                                <span>от 160 руб</span>
-                                <span>от 30 мин</span>
-                            </div>
-                            <div>
-                                <span>iPhone 6 PLUS</span>
-                                <span>от 160 руб</span>
-                                <span>от 30 мин</span>
-                            </div>
-                            <div>
-                                <span>iPhone 6s</span>
-                                <span>от 160 руб</span>
-                                <span>от 30 мин</span>
-                            </div>
-                            <div>
-                                <span>iPhone 5SE</span>
-                                <span>от 160 руб</span>
-                                <span>от 30 мин</span>
-                            </div>
-                            <div>
-                                <span>iPhone 7</span>
-                                <span>от 160 руб</span>
-                                <span>от 30 мин</span>
-                            </div>
-                            <div>
-                                <span>iPhone 7 PLUS</span>
-                                <span>от 160 руб</span>
-                                <span>от 30 мин</span>
-                            </div>
-                        </div>
-                        <div>
-                            <h6>Замена ЖКИ модуля</h6>
-                            <div>
-                                <span>iPhone 5, 5s</span>
-                                <span>от 85 руб</span>
-                                <span>от 30 мин</span>
-                            </div>
-                            <div>
-                                <span>iPhone 6</span>
-                                <span>от 85 руб</span>
-                                <span>от 30 мин</span>
-                            </div>
-                            <div>
-                                <span>iPhone 6 PLUS</span>
-                                <span>от 85 руб</span>
-                                <span>от 30 мин</span>
-                            </div>
-                            <div>
-                                <span>iPhone 6s</span>
-                                <span>от 85 руб</span>
-                                <span>от 30 мин</span>
-                            </div>
-                            <div>
-                                <span>iPhone 5SE</span>
-                                <span>от 85 руб</span>
-                                <span>от 30 мин</span>
-                            </div>
-                            <div>
-                                <span>iPhone 7</span>
-                                <span>от 85 руб</span>
-                                <span>от 30 мин</span>
-                            </div>
-                            <div>
-                                <span>iPhone 7 PLUS</span>
-                                <span>от 85 руб</span>
-                                <span>от 30 мин</span>
-                            </div>
-                        </div>
-                    </div>
-<!-- price Samsung -->
-                    <!-- <div class="price__right--column" id="price__Samsung">
+                    </div> <!-- end price Apple -->
+
+<!--  Price Samsung -->
+
+                    <div id="priceSamsung">
                             <span>Цены Samsung</span>
                             <div class="price__main--container" >
                                 <div>
@@ -281,7 +286,7 @@
                                         <span>от 30 мин</span>
                                     </div>
                                 </div>
-                                <div>
+                                <div class="price__last--block">
                                     <h6>Замена ЖКИ модуля</h6>
                                     <div>
                                         <span>iPhone 5, 5s</span>
@@ -320,9 +325,11 @@
                                     </div>
                                 </div>
                             </div>
-                    </div>   -->
+                    </div> <!-- end price Samsung -->
+
 <!--  Price Sony -->
-<div class="price__right--column" id="price__Sony">
+
+<div id="priceSony">
         <span>Цены Sony</span>
         <div class="price__main--container" >
             <div>
@@ -401,7 +408,7 @@
                     <span>от 30 мин</span>
                 </div>
             </div>
-            <div>
+            <div class="price__last--block">
                 <h6>Замена ЖКИ модуля</h6>
                 <div>
                     <span>iPhone 5, 5s</span>
@@ -440,8 +447,8 @@
                 </div>
             </div>
         </div>
-</div>
-<!-- Price Nokia -->
+</div> <!-- end price Sony -->
+
                     <div class="price__questions">
                         <span>Остались вопросы?</span><br>
                         <span>Позвоните и наш специалист проконсультирует вас по любому вопросу</span>
@@ -449,7 +456,7 @@
                     <div class="price__btn--call">
                         <button onclick="priceOrderCall()">Заказать звонок</button>
                     </div>
-                    <div  class="rewiews__social">
+                    <div  class="price__social">
                         <a class="social__item" href="https://m.facebook.com/Fiix.by/?ref=bookmarks" target="_blank">
                             <svg>
                                 <use xlink:href="#facebook"></use>
@@ -473,8 +480,7 @@
                 <span>© 2019 Fiix.by | Все права защищены | УНП 123456789</span>
                 <span>Developed <a href="#">FEAUTURUM</a></span>
             </div>
-
-            <!-- MODALS -->
+<!-- MODALS -->
     <div class="modal" id="priceModalOrder">
         <div class="modal__dialog">
             <img onclick="priceFooterSend()" src="../fix_pls_god/img/icons/closeModalOrder.svg" alt="">
