component book now

--- a/XmartWeb/xmartweb/public/index.html
+++ b/XmartWeb/xmartweb/public/index.html
@@ -8,10 +8,13 @@
       content="Best startup ever you see"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Xmart</title>
   </head>
   
   <body>
     <div id="root"></div>
   </body>
+  
 </html>
