--- a/fix_pls_god/reviews.html
+++ b/fix_pls_god/reviews.html
@@ -71,56 +71,56 @@
             <span>Отзывы / Читать все отзывы</span>
             <div class="rewiews__main--content" id="rewiewsFirstPage">
                 <div>
-                    <span>Васёк Пупкин</span>
-                    <span>20.06.2019</span>
-                    <p>Самый лучший сервис.jsfa;djksbf;akd nb;ksdbv;sdbv ahsdvbahsdbva Отремонтировали мой старичок-мобильник за 1 день. Еще и сами забрали и привезли. Все круто, все работает. Я счастлив!!! Побольше бы таких ответственных рубят с руками из нужного места.</p>
+                    <span>Сергей</span>
+                    <span>10.04.2019</span>
+                    <p>Ремонтировал iphone 7 разбил стекло. По работе нареканий на самом деле нет. Хотя с ремонтом ребята чутка затянули. Обещали за 4 часа, хотя по факту делали целый день. Но так как сделали без пылинки и соринки - БОЛЬШОЕ СПАСИБО. Но если что-то не успеваете, заранее не помешало бы набрать.  </p>
                 </div>
                 <div>
-                    <span>Васёк Пупкин</span>
-                    <span>20.06.2019</span>
-                    <p>Самый лучший сервис. Отремонтировали мой старичок-мобильник за 1 день. Еще и сами забрали и привезли. Все круто, все работает. Я счастлив!!! Побольше бы таких ответственных рубят с руками из нужного места.</p>
+                    <span>Алина</span>
+                    <span>13.08.2019</span>
+                    <p>Носила телефон в 3 мастерские и везде - замена платы. Тут сказали тоже самое. НО! У ребят была она в наличии и по цене было на 70 рублей дешевле чем у других. Хотя цены у всех прыгали от 400 до 300 рублей. Пускай это и случайное стечение обстоятельтсв, но спасибо что сделали сразу и дешевле. Рекомендую к посещению. И Всегда обзавнивайте и уточняйте. А то говорят - да все есть приезжайте, а по факту извинитe ошиблись есть вариант только дороже на 100 руб. Тут как сказали - так и сделали. Спасибо.</p>
                 </div>
                 <div>
-                    <span>wefwefwefwe</span>
-                    <span>20.06.2019</span>
-                    <p>Самый лучший сервис.  afmn fasd flhjasd fjh h fajhbfdsbf;asdbf;kajdbf;sd fhaif sdifga;isduf;asdkb;fОтремонтировали мой старичок-мобильник за 1 день. Еще и сами забрали и привезли. Все круто, все работает. Я счастлив!!! Побольше бы таких ответственных рубят с руками из нужного места.</p>
+                    <span>Александр</span>
+                    <span>20.02.2019</span>
+                    <p>сделать фото на паспорт. С собой был телефон и там уже слабо держала батарейка. Сделал фото и одновременно поменяли мне батарею. Не знал что бывают сервисы в которых можно сделать сразу и фотку и распечатать и батарею поменять. </p>
                 </div>
                 <div>
-                    <span>Vadasjdakjsd</span>
-                    <span>20.06.2019</span>
+                    <span>Марина</span>
+                    <span>29.04.2019</span>
                     <p>Самый лучший сервис.  ndfamnsflhsbdfhb;dfb;dbfhb eihfb;wejbfuawjbfjkafb ajkfb;hebfab fiefuwebfwbef fefowjefbkjwbefkjbwe fba;ejfba;jkwebfjkabwfkjbaw   afhaowhefoabwe;bf ;faebowefboabfe efb;awbef ef e efaefawefwefwef efwefaewfdfaefawe faewfaefaewfОтремонтировали мой старичок-мобильник за 1 день. Еще и сами забрали и привезли. Все круто, все работает. Я счастлив!!! Побольше бы таких ответственных рубят с руками из нужного места.</p>
                 </div>
                 <div>
-                    <span>fdfefeff`f</span>
-                    <span>20.06.2019</span>
+                    <span>Екатерина</span>
+                    <span>01.09.2019</span>
                     <p>Самый лучший сервис. Отремонтировали мой старичок-мобильник за 1 день. Еще и сами забрали и привезли. Все круто, все работает. Я счастлив!!! Побольше бы таких ответственных рубят с руками из нужного места.</p>
                 </div>
             </div>
 
             <div class="rewiews__main--content" id="rewiewsSecondPage">
                     <div>
-                        <span>Васёк Уткин</span>
-                        <span>20.06.2019</span>
+                        <span>Дима</span>
+                        <span>13.09.2019</span>
                         <p>Самый лучший сервис.jsfa;djksbf;akdnb;ksdbv;sdbvahsdvbahsdbva Отремонтировали мой старичок-мобильник за 1 день. Еще и сами забрали и привезли. Все круто, все работает. Я счастлив!!! Побольше бы таких ответственных рубят с руками из нужного места.</p>
                     </div>
                     <div>
-                        <span>Васёк Залупкин</span>
-                        <span>20.06.2019</span>
+                        <span>Оля</span>
+                        <span>20.01.2019</span>
                         <p>Самый лучший сервис. Отремонтировали мой старичок-мобильник за 1 день. Еще и сами забрали и привезли. Все круто, все работает. Я счастлив!!! Побольше бы таких ответственных рубят с руками из нужного места.</p>
                     </div>
                     <div>
-                        <span>wefwefwefwe</span>
-                        <span>20.06.2019</span>
+                        <span>Светлана</span>
+                        <span>15.05.2019</span>
                         <p>Самый лучший сервис.  afmn fasd flhjasd fjh h fajhbfdsbf;asdbf;kajdbf;sd fhaif sdifga;isduf;asdkb;fОтремонтировали мой старичок-мобильник за 1 день. Еще и сами забрали и привезли. Все круто, все работает. Я счастлив!!! Побольше бы таких ответственных рубят с руками из нужного места.</p>
                     </div>
                     <div>
-                        <span>Никитос</span>
-                        <span>20.06.2019</span>
+                        <span>Никита</span>
+                        <span>18.03.2019</span>
                         <p>Самый лучший сервис.  ndfamnsflhsbdfhb;dfb;dbfhb eihfb;wejbfuawjbfjkafb ajkfb;hebfab fiefuwebfwbef fefowjefbkjwbefkjbwe fba;ejfba;jkwebfjkabwfkjbaw   afhaowhefoabwe;bf ;faebowefboabfe efb;awbef ef e efaefawefwefwef efwefaewfdfaefawe faewfaefaewfОтремонтировали мой старичок-мобильник за 1 день. Еще и сами забрали и привезли. Все круто, все работает. Я счастлив!!! Побольше бы таких ответственных рубят с руками из нужного места.</p>
                     </div>
                     <div>
-                        <span>Лоботряс</span>
-                        <span>20.06.2019</span>
+                        <span>Костя</span>
+                        <span>03.02.2019</span>
                         <p>Самый лучший сервис. Отремонтировали мой старичок-мобильник за 1 день. Еще и сами забрали и привезли. Все круто, все работает. Я счастлив!!! Побольше бы таких ответственных рубят с руками из нужного места.</p>
                     </div>
                 </div>
@@ -151,7 +151,7 @@
                     </a>
             </div>
             <div class="rewiews__footer">
-                <span>© 2019 Fiix.by | Все права защищены | УНП 123456789</span>
+                <span>© 2019 Fiix.by | Все права защищены | УНП 193095883</span>
                 <span>Developed <a href="#">FEAUTURUM</a></span>
             </div>
         </section>
