--- a/fix_pls_god/price.html
+++ b/fix_pls_god/price.html
@@ -20,7 +20,7 @@
                 </g>
             </symbol>
         </svg>
-        <svg style="display:none;">
+    <svg style="display:none;">
             <symbol id="instagram" viewBox="0 0 40 40">
                 <g>
                     <path d="M23.8281 20C23.8281 22.1143 22.1143 23.8281 20 23.8281C17.8857 23.8281 16.1719 22.1143 16.1719 20C16.1719 17.8857 17.8857 16.1719 20 16.1719C22.1143 16.1719 23.8281 17.8857 23.8281 20Z"/>
@@ -29,7 +29,7 @@
                 </g>
             </symbol>
         </svg>
-        <svg style="display:none;">
+    <svg style="display:none;">
             <symbol id="vk" viewBox="0 0 40 40">
                 <g>
                     <path d="M20 0C8.95468 0 0 8.95427 0 20C0 31.0457 8.95468 40 20 40C31.0453 40 40 31.0457 40 20C40 8.95427 31.0453 0 20 0ZM30.1451 22.1631C31.0772 23.0736 32.0634 23.9304 32.9003 24.935C33.271 25.3794 33.6205 25.839 33.8864 26.3558C34.2662 27.0928 33.9233 27.901 33.2636 27.9448L29.1662 27.9439C28.108 28.0315 27.2659 27.6047 26.5559 26.8812C25.9892 26.3047 25.4633 25.6888 24.9174 25.0926C24.6944 24.8479 24.4595 24.6175 24.1796 24.4362C23.6211 24.0728 23.1358 24.1841 22.8158 24.7677C22.4896 25.3614 22.4151 26.0194 22.384 26.6803C22.3394 27.6464 22.0481 27.8989 21.0787 27.9443C19.0073 28.0413 17.0418 27.7271 15.2151 26.6828C13.6037 25.7616 12.3564 24.4616 11.2696 22.9897C9.15315 20.1203 7.53228 16.971 6.07591 13.7314C5.74813 13.0017 5.98793 12.6114 6.79284 12.5962C8.13013 12.5704 9.46742 12.5737 10.8047 12.595C11.349 12.6036 11.7091 12.915 11.9182 13.4285C12.6408 15.2065 13.5268 16.8982 14.6369 18.4671C14.9328 18.8849 15.2348 19.3015 15.6649 19.5965C16.1395 19.9223 16.5013 19.8146 16.7251 19.2847C16.8683 18.9479 16.9301 18.5878 16.9612 18.2269C17.0676 16.9907 17.0803 15.7549 16.8962 14.5236C16.7816 13.753 16.3482 13.2554 15.5802 13.1098C15.189 13.0357 15.2462 12.8908 15.4365 12.6674C15.7668 12.2811 16.0761 12.0421 16.6944 12.0421L21.3238 12.0413C22.0534 12.1846 22.2171 12.5119 22.3161 13.2469L22.3202 18.3914C22.3116 18.6758 22.463 19.5188 22.9737 19.705C23.3829 19.84 23.653 19.5118 23.8977 19.2528C25.0079 18.0747 25.7989 16.6842 26.5072 15.245C26.8198 14.6103 27.0895 13.9536 27.3514 13.2956C27.5462 12.809 27.849 12.5696 28.3982 12.5778L32.8561 12.5831C32.9874 12.5831 33.1208 12.5843 33.2509 12.6069C34.0023 12.7353 34.2081 13.0586 33.9757 13.7915C33.6098 14.943 32.899 15.9022 32.2042 16.8638C31.4594 17.8934 30.6652 18.887 29.9278 19.921C29.2501 20.8663 29.3037 21.3422 30.1451 22.1631Z"/>
@@ -74,22 +74,22 @@
         <section>
             <div class="price__column">
                 <div class="price__left--column" id="left__column">
-                    <button class="tab" data='1'>Apple</button>
-                    <button class="tab" data='2'>Samsung</button>
-                    <button class="tab" data='3'>Xiaomi</button>
-                    <button class="tab" data='4'>Meizu</button>
-                    <button class="tab" data='5'>Huawei</button>
-                    <button class="tab" data='6'>LG</button>
-                    <button class="tab" data='7'>OnePlus</button>
-                    <button class="tab" data='8'>Sony</button>
-                    <button class="tab" data='9'>Lenovo</button>
-                    <button class="tab" data='10'>Nokia</button>
+                    <a href="#" class="tab" data='1'>Iphone</a>
+                    <a href="#" class="tab" data='2'>Samsung</a>
+                    <a href="#" class="tab" data='3'>Xiaomi</a>
+                    <a href="#" class="tab" data='4'>Meizu</a>
+                    <a href="#" class="tab" data='5'>Huawei</a>
+                    <a href="#" class="tab" data='6'>LG</a>
+                    <a href="#" class="tab" data='7'>OnePlus</a>
+                    <a href="#" class="tab" data='8'>Sony</a>
+                    <a href="#" class="tab" data='9'>Lenovo</a>
+                    <a href="#" class="tab" data='10'>Nokia</a>
                 </div>
                 
 <!--  Price Apple -->
                 <div class="price__right--column">
                     <div class="tab-body" data ="1">
-                            <span>Цены Apple</span>
+                            <span>Цены Iphone</span>
                             <div class="price__main--container" >
                                 <div>
                                     <h6>Ремонт любой сложности</h6>
