--- a/ajax/index.html
+++ b/ajax/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <form action="back.php" method="GET">
+    <form action="back.php" method="POST">
         <p>Name:<input type="text" name="fname"></p>
         <p>Last Name:<input type="text" name="lname"></p>
         <input type="submit" value="send">
