--- a/fix_pls_god/index.html
+++ b/fix_pls_god/index.html
@@ -377,7 +377,7 @@
         </div>
     </div>
     <!-- SCRIPTS -->
-    <!-- <script src="https://api-maps.yandex.ru/2.1/?apikey=67433119-89dd-4c49-b6b5-87d7557e0bfb&lang=ru_RU"></script> -->
+    <script src="https://api-maps.yandex.ru/2.1/?apikey=67433119-89dd-4c49-b6b5-87d7557e0bfb&lang=ru_RU"></script>
         <script>
             "use strict";ymaps.ready((function(){var e=new ymaps.Map("map",{center:[53.874421975668085,27.63028032552346],zoom:17,controls:["zoomControl"],behaviors:["drag","multiTouch"]}),o=new ymaps.Placemark([53.874421975668085,27.63028032552346],{});e.geoObjects.add(o)}));var e=document.querySelector(".toggle__menu"),o=document.querySelectorAll(".btn__send--call"),n=document.querySelector(".modal"),t=document.querySelector(".exit__modal"),l=document.querySelector(".open__send--call"),c=document.querySelector(".modal__send--wrapper"),s=document.querySelector(".back__to--home"),i=document.querySelectorAll(".change__menu--navigation");document.onkeydown=function(e){27==e.keyCode&&(n.style.display="none")},e.onclick=function(){var e=document.getElementById("responsive__mobile");document.getElementById("myTopnav").classList.toggle("responsive"),e.classList.toggle("mobile__nav--responsive")};for(var r=0;r<o.length;r++)o[r].onclick=function(){n.style.display="block"};t.onclick=function(){n.style.display="none"},l.onclick=function(){c.style.display="block",n.style.display="none"},s.onclick=function(){c.style.display="none"};for(r=0;r<i.length;r++)i[r].onclick=function(){document.getElementById("myTopnav").classList.remove("responsive"),document.getElementById("responsive__mobile").classList.remove("mobile__nav--responsive")};
         </script>
