--- a/fix_pls_god/index.html
+++ b/fix_pls_god/index.html
@@ -298,6 +298,11 @@
         </div>
     </section>
 <!-- FOOTER -->
+<form method="POST" action="https://formspree.io/garisongarisongarison666@gmail.com">
+    <input type="email" name="email" placeholder="Your email">
+    <textarea name="message" placeholder="Test Message"></textarea>
+    <button type="submit">Send Test</button>
+  </form>
     <footer class="footer" id="footer__anchor">
         <div class="footer__wrapper">
             <h2>Как с нами связаться?</h2>
