--- a/fix_pls_god/index.html
+++ b/fix_pls_god/index.html
@@ -299,7 +299,7 @@
     </section>
 <!-- FOOTER -->
 <form method="POST" action="https://formspree.io/garisongarisongarison666@gmail.com">
-    <input type="email" name="email" placeholder="Your email">
+    <input type="phonel" name="phone" placeholder="Ваш номер телефона">
     <textarea name="message" placeholder="Test Message"></textarea>
     <button type="submit">Send Test</button>
   </form>
