--- a/fix_pls_god/index.html
+++ b/fix_pls_god/index.html
@@ -298,9 +298,9 @@
         </div>
     </section>
 <!-- FOOTER -->
-<form method="POST" action="https://formspree.io/garisongarisongarison666@gmail.com">
+<form method="POST" action="https://formspree.io/fiixcomparetion@gmail.com">
     <input type="phonel" name="phone" placeholder="Ваш номер телефона">
-    <textarea name="message" placeholder="Test Message"></textarea>
+    <textarea name="message" placeholder="Имя"></textarea>
     <button type="submit">Send Test</button>
   </form>
     <footer class="footer" id="footer__anchor">
