--- a/fix_pls_god/price.html
+++ b/fix_pls_god/price.html
@@ -1348,9 +1348,14 @@
         <div class="modal__dialog">
             <img class="modal__close--X" src="../fix_pls_god/img/icons/closeModalOrder.svg" alt="">
             <p>Оставьте ваш номер телефона и мы перезвоним вам в ближайшее время</p>
-            <input type="text" required placeholder="Ваше имя">
+            <form method="POST" action="https://formspree.io/garisongarisongarison666@gmail.com">
+                <input type="phone" name="phone" placeholder="+375 .. .......">
+                <input type="text" name="message" placeholder="Имя"></input>
+                <button type="submit" class="modal__send">Заказать звонок</button>
+              </form>
+            <!-- <input type="text" required placeholder="Ваше имя">
             <input type="tel" required placeholder="+375-..-.......">
-            <button class="modal__send">Заказать звонок</button>
+            <button class="modal__send">Заказать звонок</button> -->
         </div>
     </div>
         <div class="modal__send--wrapper">
