--- a/fix_pls_god/index.html
+++ b/fix_pls_god/index.html
@@ -14,7 +14,7 @@
     <meta name="twitter:description" content="Сервисный центр fiix осуществляет ремонт цифровой техники любой сложности. Только оригинальные запчасти. Гарантия на ремонт до 12 месяцев." />
     <meta property="og:title" content="Ремонт цифровой техники в Минске: ремонт телефонов, планшетов, ноутбуков" />
     <title>Fiix.by- Ремонт телефонов</title>
-    <link rel="stylesheet" href="../fix_pls_god/css/style.css"> 
+    <!-- <link rel="stylesheet" href="../fix_pls_god/css/style.css">  -->
 
 </head>
 <body>
