--- a/fix_pls_god/price.html
+++ b/fix_pls_god/price.html
@@ -53,7 +53,7 @@
                                 <li><a class="change__menu--navigation" href="../fix_pls_god/index.html#footer__anchor">Контакты</a></li>
                                 <a class="links phone--number" href="tel:+375291665200">+375(29)166 52 00</a> 
                             </ul>
-                    <img src="../fix_pls_god/img/icons/menu.svg" alt="защитные стекла на телефон">
+                    <img src="../fix_pls_god/img/menu.svg" alt="защитные стекла на телефон">
                     <a class="toggle__menu"  href="javascript:void(0);"></a>
                 </div>
         
