--- a/fix_pls_god/reviews.html
+++ b/fix_pls_god/reviews.html
@@ -52,7 +52,7 @@
     <!-- HEADER -->
 <header>
     <div class="call">
-        <img src="../fix_pls_god/img/icons/call.svg" alt="ремонт телефонов рядом">
+        <img src="../fix_pls_god/img/call.svg" alt="ремонт телефонов рядом">
         <a href="tel:+375291665200"></a>
     </div>
     <div class="mobile__nav" id="responsive__mobile">
