--- a/fix_pls_god/reviews.html
+++ b/fix_pls_god/reviews.html
@@ -71,7 +71,7 @@
         
     <div class="nav__wrapper">
         <nav class="nav__container">
-            <a href="#"><img src="../fix_pls_god/img/icons/logo.svg" alt="fiix.by"></a> 
+            <a href="#"><img src="../fix_pls_god/img/logo.svg" alt="fiix.by"></a> 
             <ul class="topnav"> 
                 <li><a href="../fix_pls_god/index.html#home__anchor" class="active">Главная</a></li>
                 <li><a href="../fix_pls_god/index.html#about__anchor">О нас</a></li>
